# rp2040-synth

./: .gitignore  CMakeLists.txt
src/: main.c
src/audio/: i2s_output.c  i2s_output.h  i2s_tx.pio  tone_generator.c  tone_generator.h
src/config/: board_config.c  board_config.h
src/indicators/: status_led.c  status_led.h
src/matrix/: matrix.c  matrix.h
